--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="page-wrapper">
     <header id="header">
-      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Acme logo, large and in red"></a>
+      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Acme logo, large and in red" width="500" height="600"></a>
       <h1>My Demo Site</h1>
       <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
     </header>
@@ -28,42 +28,45 @@
     <main id="content-wrapper">
       <div id="main-content">
         <h2><strong>This is our h2 Tag</strong></h2>
-        <img class="imageR" src="images/main.png" alt="Logo for Main Squeeze Juice Company in black and white">
+        <img class="imageR" src="images/main.png" alt="Logo for Main Squeeze Juice Company in black and white" width="500" height="600">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <ul id="bul1">
+      <ul id="bul1">
           <li>List 1</li>
           <li>List 2</li>
           <li>List 3</li>
           <li>List 4</li>
-        </ul>
+      </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-        <ul id="bul2">
+      <ul id="bul2">
           <li>List 1</li>
           <li>List 2</li>
           <li>List 3</li>
           <li>List 4</li>
-        </ul>
+      </ul>
         <div id="center">
-                   <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></ifra
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
-      <aside id="side-content">
-        <h3>Interesting Articles</h3>
-        <ol id="news">
-          <li><a href="#">Article 1</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 2</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 3</a><div><p>Preview of very interesting article article</p></div></li>
-          <li><a href="#">Article 4</a><div><p>Preview of very interesting article article</p></div></li>
-        </ol>
+       <aside id="side-content">
+         <h3>Interesting Articles</h3>
+          <ol id="news">
+            <li><a href="">Title</a><div><p>Yesh</p></div></li>
+            <li><a href="">Title</a><div><p>Yesh</p></div></li>
+            <li><a href="">Title</a><div><p>Yesh</p></div></li>
+            <li><a href="">Title</a><div><p>Yesh</p></div></li>
+         </ol>
       </aside>
-    </main>
+   </main>
     <footer id="footer">
-      <p>Footer Content is here</p>
+        <h1>Sources</h1>
+        <h4>A</h4>
+		<h4>()</h4>
+		<h4>()</h4>
+		<h4> () </h4>
     </footer>
-  </div>
 </body>
 
 </html>
